--- a/index.html
+++ b/index.html
@@ -132,65 +132,75 @@
       </div>
       <div class="content-area first">
         <div class="search-bar">
-          <input type="text" id="s-word" name="search" value="word">
+          <input type="text" id="s-word" name="search">
           <button type="submit"></button>
         </div>
       </div>
       <div class="content-area second">
-        <div class="col1">
-          <div class="slide">
-            <a href="#">
-              <span class="slide-title">글로벌 축제로 돌아온 제 16회 DIMF</span>
-              <span class="slide-content">국내 유일의 글로벌 뮤지컬 축제 DIMF가 3년만에 글로벌 공연 초청과 함께 오는 6월 24일 코오롱 야외음악당에서 야외 개막식과 초대형 뮤지컬 갈라 콘서트를 시작으로 개최됩니다</span>
-            </a>
-          </div>
-          <div class="slide">
-            <a href="#">
-              <span class="slide-title">대구 대표 축제. 컬러풀 페스티벌</span>
-              <span class="slide-content">오는 7월 9일(토) ~ 10일(일) 양일간 국채보상로를 거대한 공연장으로 탈바꿈하는 지역대표 글로벌축제 '대구컬러풀페스티벌'이 개최 됩니다</span>
-            </a>
-          </div>
-          <div class="slide">
-            <a href="#">
-              <span class="slide-title">내 삶이 더 좋아지는 대구!</span>
-              <span class="slide-content">사람을 키우고, 산업이 변화합니다. 공간이 바뀌고, 미래를 향한 새로운 길을 제시합니다. 내 삶이 더 나아집니다.</span>
-            </a>
-          </div>
-        </div>
-        <div class="col2"></div>
-        <div class="col3">
-          <div class="wt">
-            <div class="wt-icon-area"></div>
-            <div class="wt-tem-area">
+        <div class="wrap">
+          <div class="col1">
+            <div class="slide">
               <a href="#">
-                24.2℃
-                <div class="wt-text">기상청에서 제공하는 대구의 날씨 예보입니다.</div>
+                <div class="ad-text">
+                  <span class="slide-title">글로벌 축제로 돌아온 제 16회 DIMF</span>
+                  <span class="slide-content">국내 유일의 글로벌 뮤지컬 축제 DIMF가 3년만에 글로벌 공연 초청과 함께 오는 6월 24일 코오롱 야외음악당에서 야외 개막식과 초대형 뮤지컬 갈라 콘서트를 시작으로 개최됩니다</span>
+                </div>
+                <div class="ad-img"></div>
               </a>
             </div>
-            <div class="wt-dust-btn">
-              <div class="pop-wt">
-                <ul>
-                  <li><a href="#">초미세먼지13㎍/㎥ 좋음</a></li>
-                  <li><a href="#">미세먼지26㎍/㎥ 좋음</a></li>
-                  <li><a href="#">오존0.050ppm 보통</a></li>
-                </ul>
-              </div>
+            <div class="slide">
+              <a href="#">
+                <div class="ad-text">
+                  <span class="slide-title">대구 대표 축제. 컬러풀 페스티벌</span>
+                  <span class="slide-content">오는 7월 9일(토) ~ 10일(일) 양일간 국채보상로를 거대한 공연장으로 탈바꿈하는 지역대표 글로벌축제 '대구컬러풀페스티벌'이 개최 됩니다</span>
+                </div>
+                <div class="ad-img"></div>
+              </a>
             </div>
-            <div class="wt-slide-area">
-              <a href="#">초미세먼지13㎍/㎥ <span>좋음</span></a>
-              <a href="#">미세먼지26㎍/㎥ <span>좋음</span></a>
-              <a href="#">오존0.050ppm <span>보통</span></a>
+            <div class="slide">
+              <a href="#">
+                <div class="ad-text">
+                  <span class="slide-title">내 삶이 더 좋아지는 대구!</span>
+                  <span class="slide-content">사람을 키우고, 산업이 변화합니다. 공간이 바뀌고, 미래를 향한 새로운 길을 제시합니다. 내 삶이 더 나아집니다.</span>
+                </div>
+                <div class="ad-img"></div>
+              </a>
             </div>
           </div>
-          <div class="mayor">
-            <span class="img"></span>
-            <a href="#">시장실 바로가기 ></a>
-            <ul>
-              <li><a href="#">비전 및 목표</a></li>
-              <li><a href="#">공약&매니페스토</a></li>
-              <li><a href="#">현장! 소통24시</a></li>
-              <li><a href="#">시장에게 바란다</a></li>
-            </ul>
+          <div class="col2">
+            <div class="wt">
+              <div class="wt-icon-area"></div>
+              <div class="wt-tem-area">
+                <a href="#">
+                  24.2℃
+                  <div class="wt-text">기상청에서 제공하는 대구의 날씨 예보입니다.</div>
+                </a>
+              </div>
+              <div class="wt-dust-btn">
+                <div class="pop-wt">
+                  <ul>
+                    <li><a href="#">초미세먼지13㎍/㎥ 좋음</a></li>
+                    <li><a href="#">미세먼지26㎍/㎥ 좋음</a></li>
+                    <li><a href="#">오존0.050ppm 보통</a></li>
+                  </ul>
+                </div>
+              </div>
+              <div class="wt-slide-area">
+                <a href="#">초미세먼지13㎍/㎥ <span>좋음</span></a>
+                <a href="#">미세먼지26㎍/㎥ <span>좋음</span></a>
+                <a href="#">오존0.050ppm <span>보통</span></a>
+              </div>
+            </div>
+            <div class="mayor">
+              <span class="img"></span>
+              <a href="#">시장실 바로가기 ></a>
+              <ul>
+                <li><a href="#">비전 및 목표</a></li>
+                <li><a href="#">공약&매니페스토</a></li>
+                <li><a href="#">현장! 소통24시</a></li>
+                <li><a href="#">시장에게 바란다</a></li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
