main page content fifth
main page content fifth

--- a/index.html
+++ b/index.html
@@ -142,10 +142,16 @@
             <div class="slide">
               <a href="#">
                 <div class="ad-text">
-                  <span class="slide-title">글로벌 축제로 돌아온 제 16회 DIMF</span>
+                  <span class="slide-title">글로벌 축제로 돌아온 제16회 DIMF</span>
                   <span class="slide-content">국내 유일의 글로벌 뮤지컬 축제 DIMF가 3년만에 글로벌 공연 초청과 함께 오는 6월 24일 코오롱 야외음악당에서 야외 개막식과 초대형 뮤지컬 갈라 콘서트를 시작으로 개최됩니다</span>
                 </div>
                 <div class="ad-img"></div>
+                <div class="btn-group">
+                  <div class="btn-prev"></div>
+                  <div class="btn-count"><span>1</span><span>/3</span></div>
+                  <div class="btn-next"></div>
+                  <div class="btn-stop"><span></span></div>
+                </div>
               </a>
             </div>
             <div class="slide">
@@ -177,23 +183,23 @@
                 </a>
               </div>
               <div class="wt-dust-btn">
-                <div class="pop-wt">
+                <div class="lst">
                   <ul>
-                    <li><a href="#">초미세먼지13㎍/㎥ 좋음</a></li>
-                    <li><a href="#">미세먼지26㎍/㎥ 좋음</a></li>
-                    <li><a href="#">오존0.050ppm 보통</a></li>
+                    <li><a href="#">초미세먼지<b>13</b>㎍/㎥ 좋음</a></li>
+                    <li><a href="#">미세먼지<b>26</b>㎍/㎥ 좋음</a></li>
+                    <li><a href="#">오존<b>0.050</b>ppm 보통</a></li>
                   </ul>
                 </div>
               </div>
               <div class="wt-slide-area">
-                <a href="#">초미세먼지13㎍/㎥ <span>좋음</span></a>
-                <a href="#">미세먼지26㎍/㎥ <span>좋음</span></a>
-                <a href="#">오존0.050ppm <span>보통</span></a>
+                <a href="#">초미세먼지<b>13</b>㎍/㎥ <span>좋음</span></a>
+                <a href="#">미세먼지<b>26</b>㎍/㎥ <span>좋음</span></a>
+                <a href="#">오존<b>0.050</b>ppm <span>보통</span></a>
               </div>
             </div>
             <div class="mayor">
               <span class="img"></span>
-              <a href="#">시장실 바로가기 ></a>
+              <a href="#">시장실 바로가기</a>
               <ul>
                 <li><a href="#">비전 및 목표</a></li>
                 <li><a href="#">공약&매니페스토</a></li>
@@ -205,239 +211,245 @@
         </div>
       </div>
       <div class="content-area third">
-        <div class="col1">
-          <h2>시민소통</h2>
-          <div class="main-box">
-            <ul>
-              <li><a href="#"></a></li>
-              <li><a href="#"></a></li>
-              <li><a href="#"></a></li>
-              <li><a href="#"></a></li>
-              <li><a href="#"></a></li>
-              <li><a href="#"></a></li>
-            </ul>
+        <div class="wrap">
+          <div class="col1">
+            <h2>시민소통</h2>
+            <div class="main-box">
+              <ul>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+              </ul>
+            </div>
           </div>
-        </div>
-        <div class="col2">
-          <h2>코로나 현황<a href="#">더보기 +</a></h2>
-          <div class="main-box">
-            <div class="box-header">
+          <div class="col2">
+            <h2>코로나 현황<a href="#">더보기 +</a></h2>
+            <div class="main-box">
+              <div class="box-header">
+                <div class="img-area"><img src="./img/content3/covid_title.png" alt="covid_title"></div>
+                <a href="#"><img src="./img/content3/covid_btn.png" alt="covid_btn"></a>
+                <span>2022.05.30. 00 기준</span>
+              </div>
+              <div class="box-content">
+                <div class="count left">
+                  <span>신규확진자</span>
+                  301명
+                </div>
+                <div class="count right">
+                  <span>누적확진자</span>
+                  756,711명
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col3">
+            <h2>핫이슈</h2>
+            <div class="main-box">
               <div class="img-area"></div>
-              <span>2022.05.30. 00 기준</span>
-              <a href="#"></a>
-            </div>
-            <div class="box-content">
-              <div class="count left">
-                <span>신규확진자</span>
-                301명
-              </div>
-              <div class="count right">
-                <span>누적확진자</span>
-                756,711명
+              <div class="text-area">
+                긴 팬데믹 이후 5일간의 잊지 못할 추억
               </div>
             </div>
           </div>
-        </div>
-        <div class="col3">
-          <h2>핫이슈</h2>
-          <div class="main-box">
-            <div class="img-area"></div>
-            <div class="text-area">
-              긴 팬데믹 이후 5일간의 잊지 못할 추억
-            </div>
-          </div>
-        </div>
-        <div class="col4">
-          <h2><a href="#">더보기 +</a></h2>
-          <div class="main-box">
-            <div class="img-area"></div>
-            <div class="text-area">
-              대구세계가스총회에서 나온 10대 메시지
+          <div class="col4">
+            <h2><a href="#">더보기 +</a></h2>
+            <div class="main-box">
+              <div class="img-area"></div>
+              <div class="text-area">
+                대구세계가스총회에서 나온 10대 메시지
+              </div>
             </div>
           </div>
         </div>
       </div>
       <div class="content-area fourth">
-        <ul>
-          <li>
-            <a href="#">
-              <div class="icon01"></div>
-              <p>문화·관광·체육</p>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <div class="icon02"></div>
-              <p>교통</p>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <div class="icon03"></div>
-              <p>복지</p>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <div class="icon04"></div>
-              <p>여성·가족·교육</p>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <div class="icon05"></div>
-              <p>건강·보건·위생</p>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <div class="icon06"></div>
-              <p>산업·경제</p>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <div class="icon07"></div>
-              <p>환경</p>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <div class="icon08"></div>
-              <p>소방·안전</p>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <div class="icon09"></div>
-              <p>도시주택·건설</p>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <div class="icon10"></div>
-              <p>행정·재정·세정</p>
-            </a>
-          </li>
-        </ul>
-      </div>
-      <div class="content-area fifth">
-        <div class="col1">
+        <div class="wrap">
           <ul>
-            <li><a href="#">공지사항</a></li>
-            <li><a href="#">보도자료</a></li>
-            <li><a href="#">시험정보</a></li>
-            <li><a href="#">공시공고</a></li>
-            <li><a href="#">공모/모집</a></li>
+            <li>
+              <a href="#">
+                <div class="icon01"></div>
+                <p>문화·관광·체육</p>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <div class="icon02"></div>
+                <p>교통</p>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <div class="icon03"></div>
+                <p>복지</p>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <div class="icon04"></div>
+                <p>여성·가족·교육</p>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <div class="icon05"></div>
+                <p>건강·보건·위생</p>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <div class="icon06"></div>
+                <p>산업·경제</p>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <div class="icon07"></div>
+                <p>환경</p>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <div class="icon08"></div>
+                <p>소방·안전</p>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <div class="icon09"></div>
+                <p>도시주택·건설</p>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <div class="icon10"></div>
+                <p>행정·재정·세정</p>
+              </a>
+            </li>
           </ul>
         </div>
-        <div class="col2">
-          <ul class="notice">
-            <li>
-              <a href="#">
-                <span class="date">05.30</span>
-                <span class="dept">공군제11전투비행단</span>
-                <div class="tit">22년 6월 야간비행훈련 계획 안내</div>
-                <p class="desc">공군 제 11전투비행단 6월 야간비행훈련으로 항공기 소음발생이 예상되어 아래와 같이 시행할 예정입니다.</p>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <span class="date">05.27</span>
-                <span class="dept">스마트시티과</span>
-                <div class="tit">수성알파시티 도담 직장어린이집 입학설명회(원아모집)</div>
-                <p class="desc">대구 수성알파시티 내 ⌜알파시티 도담 직장어린이집⌟이 올 해 8월 개원을 앞두고 공동 직장어린이집 운영에 대한 설명회를 개최합니다.</p>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <span class="date">05.27</span>
-                <span class="dept">섬유패션과</span>
-                <div class="tit">제봉뜰 두류봉제지식산업센터 공장시설 사용수익허가</div>
-                <p class="desc">대구시설공단에서 관리하는 제봉뜰 두류봉제지식산업센터 공장시설의 사용수익허가를 위하여 다음과 같이 입찰</p>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <span class="date">05.26</span>
-                <span class="dept">여성가족과</span>
-                <div class="tit">청년 양성평등 문화 추진단(버터나이프크루) 4기 모집</div>
-                <p class="desc">< 청년 양성평등 문화 추진단(버터나이프크루) 4기 모집 개요 > 가. 모집 기간 : 2022. 5. 23.(월) ~ 6. 10.(금) ※ 온라인 사업 설명회 개최</p>
-              </a>
-            </li>
-          </ul>
-          <ul class="report">
-            <li>
-              <a href="#">
-                <span class="date">05.27</span>
-                <div class="tit">대구광역시 보도자료 (2022-05-27)</div>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <span class="date">05.27</span>
-                <div class="tit">대구광역시 보도자료 (2022-05-26)</div>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <span class="date">05.27</span>
-                <div class="tit">대구광역시 보도자료 (2022-05-25)</div>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <span class="date">05.27</span>
-                <div class="tit">대구광역시 보도자료 (2022-05-24)</div>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <span class="date">05.27</span>
-                <div class="tit">대구광역시 보도자료 (2022-05-23)</div>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <span class="date">05.27</span>
-                <div class="tit">대구광역시 보도자료 (2022-05-22)</div>
-              </a>
-            </li>
-          </ul>
-          <ul class="test-information">
-            <li>
-              <a href="#">
-                <span class="date">05.20</span>
-                <span class="dept">인사혁신과</span>
-                <div class="tit">2022년도 제1회 대구광역시 지방공무원 임용시험 인성검사</div>
-                <p class="desc">- 2022년도 제1회 대구광역시 지방공무원 임용시험 필기시험 합격자 인성검사 응시주소 공지 - □ 인성검사 개요 1. 검사기간 :</p>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <span class="date">05.13</span>
-                <span class="dept">인사혁신과</span>
-                <div class="tit">2022년도 제1회 대구광역시 지방공무원 임용 필기시험 합격자 및</div>
-                <p class="desc">2022년 4월 30일 시행한 2022년도 제1회 대구광역시 지방공무원 임용 필기시험 합격자 및 면접시험</p>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <span class="date">05.10</span>
-                <span class="dept">인사혁신과</span>
-                <div class="tit">2022년도 제1회 지방공무원 임용시험 성적사전공개 및 정답공개</div>
-                <p class="desc">대구시설공단에서 관리하는 제봉뜰 두류봉제지식산업센터 공장시설의 사용수익허가를 위하여 다음과 같이 입찰</p></p>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <span class="date">05.02</span>
-                <span class="dept">인사혁신과</span>
-                <div class="tit">2022년도 제1회 대구시 지방공무원 임용시험 응시현황 안내</div>
-                <p class="desc">2022년도 제1회 대구시 지방공무원 임용시험 응시현황을 붙임과 같이 안내해 드리오니 참고하시기 바랍니다.</p>
-              </a>
-            </li>
-          </ul>
+      </div>
+      <div class="content-area fifth">
+        <div class="wrap">
+          <div class="col1">
+            <ul>
+              <li><a href="#">공지사항</a></li>
+              <li><a href="#">보도자료</a></li>
+              <li><a href="#">시험정보</a></li>
+              <li><a href="#">공시공고</a></li>
+              <li><a href="#">공모/모집</a></li>
+            </ul>
+          </div>
+          <div class="col2">
+            <ul class="notice">
+              <li>
+                <a href="#">
+                  <span class="date">05.30</span>
+                  <span class="dept">공군제11전투비행단</span>
+                  <div class="tit">22년 6월 야간비행훈련 계획 안내</div>
+                  <p class="desc">공군 제 11전투비행단 6월 야간비행훈련으로 항공기 소음발생이 예상되어 아래와 같이 시행할 예정입니다.</p>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <span class="date">05.27</span>
+                  <span class="dept">스마트시티과</span>
+                  <div class="tit">수성알파시티 도담 직장어린이집 입학설명회(원아모집)</div>
+                  <p class="desc">대구 수성알파시티 내 ⌜알파시티 도담 직장어린이집⌟이 올 해 8월 개원을 앞두고 공동 직장어린이집 운영에 대한 설명회를 개최합니다.</p>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <span class="date">05.27</span>
+                  <span class="dept">섬유패션과</span>
+                  <div class="tit">제봉뜰 두류봉제지식산업센터 공장시설 사용수익허가</div>
+                  <p class="desc">대구시설공단에서 관리하는 제봉뜰 두류봉제지식산업센터 공장시설의 사용수익허가를 위하여 다음과 같이 입찰</p>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <span class="date">05.26</span>
+                  <span class="dept">여성가족과</span>
+                  <div class="tit">청년 양성평등 문화 추진단(버터나이프크루) 4기 모집</div>
+                  <p class="desc">< 청년 양성평등 문화 추진단(버터나이프크루) 4기 모집 개요 > 가. 모집 기간 : 2022. 5. 23.(월) ~ 6. 10.(금) ※ 온라인 사업 설명회 개최</p>
+                </a>
+              </li>
+            </ul>
+            <ul class="report">
+              <li>
+                <a href="#">
+                  <span class="date">05.27</span>
+                  <div class="tit">대구광역시 보도자료 (2022-05-27)</div>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <span class="date">05.27</span>
+                  <div class="tit">대구광역시 보도자료 (2022-05-26)</div>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <span class="date">05.27</span>
+                  <div class="tit">대구광역시 보도자료 (2022-05-25)</div>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <span class="date">05.27</span>
+                  <div class="tit">대구광역시 보도자료 (2022-05-24)</div>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <span class="date">05.27</span>
+                  <div class="tit">대구광역시 보도자료 (2022-05-23)</div>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <span class="date">05.27</span>
+                  <div class="tit">대구광역시 보도자료 (2022-05-22)</div>
+                </a>
+              </li>
+            </ul>
+            <ul class="test-information">
+              <li>
+                <a href="#">
+                  <span class="date">05.20</span>
+                  <span class="dept">인사혁신과</span>
+                  <div class="tit">2022년도 제1회 대구광역시 지방공무원 임용시험 인성검사</div>
+                  <p class="desc">- 2022년도 제1회 대구광역시 지방공무원 임용시험 필기시험 합격자 인성검사 응시주소 공지 - □ 인성검사 개요 1. 검사기간 :</p>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <span class="date">05.13</span>
+                  <span class="dept">인사혁신과</span>
+                  <div class="tit">2022년도 제1회 대구광역시 지방공무원 임용 필기시험 합격자 및</div>
+                  <p class="desc">2022년 4월 30일 시행한 2022년도 제1회 대구광역시 지방공무원 임용 필기시험 합격자 및 면접시험</p>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <span class="date">05.10</span>
+                  <span class="dept">인사혁신과</span>
+                  <div class="tit">2022년도 제1회 지방공무원 임용시험 성적사전공개 및 정답공개</div>
+                  <p class="desc">대구시설공단에서 관리하는 제봉뜰 두류봉제지식산업센터 공장시설의 사용수익허가를 위하여 다음과 같이 입찰</p></p>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <span class="date">05.02</span>
+                  <span class="dept">인사혁신과</span>
+                  <div class="tit">2022년도 제1회 대구시 지방공무원 임용시험 응시현황 안내</div>
+                  <p class="desc">2022년도 제1회 대구시 지방공무원 임용시험 응시현황을 붙임과 같이 안내해 드리오니 참고하시기 바랍니다.</p>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
       <div class="content-area sixth">
