--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
         <div class="wrap">
           <div class="col1">
             <ul>
-              <li><a href="#">공지사항</a></li>
+              <li class="on"><a href="#" class="on">공지사항</a></li>
               <li><a href="#">보도자료</a></li>
               <li><a href="#">시험정보</a></li>
               <li><a href="#">공시공고</a></li>
@@ -453,91 +453,278 @@
         </div>
       </div>
       <div class="content-area sixth">
-        <div class="col1">
-          <h2>컬러풀대구TV<a href="#">더보기 +</a></h2>
-          <div class="main-box"></div>
-          <div class="main-box"></div>
-        </div>
-        <div class="col2">
-          <h2>알림존</h2>
-          <div class="swiper"></div>
+        <div class="wrap">
+          <div class="col1">
+            <h2>컬러풀대구TV<a href="#">더보기 +</a></h2>
+            <div class="main-box"></div>
+            <div class="main-box"></div>
+          </div>
+          <div class="col2">
+            <h2>알림존</h2>
+            <div class="swiper">
+              <div class="swiper-container">
+                <div class="swiper-slide"></div>
+                <div class="swiper-slide"></div>
+                <div class="swiper-slide"></div>
+                <div class="swiper-slide"></div>
+                <div class="swiper-slide"></div>
+                <div class="swiper-slide"></div>
+                <div class="swiper-slide"></div>
+                <div class="swiper-slide"></div>
+                <div class="swiper-slide"></div>
+                <div class="swiper-slide"></div>
+                <div class="swiper-slide"></div>
+                <div class="swiper-slide"></div>
+                <div class="swiper-slide"></div>
+                <div class="swiper-slide"></div>
+                <div class="swiper-slide"></div>
+                <div class="swiper-slide"></div>
+                <div class="swiper-slide"></div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <div class="content-area seventh">
-        <div class="col1">
-          <h2>대구시 운영서비스</h2>
-          <div class="swiper"></div>
-        </div>
-        <div class="col2">
-          <ul>
-            <li>자주찾는 메뉴</li>
-            <li>시민</li>
-            <li>사업자</li>
-            <li>관광객</li>
-          </ul>
-          <div class="menu">
-            <ul>
-              <li><a href="#" class="href-icon">달구벌미소문자</a></li>
-              <li><a href="#" class="href-icon">물가동향</a></li>
-              <li><a href="#" class="href-icon">컬러풀 뉴스룸</a></li>
-              <li><a href="#" class="href-icon">수돗물실시간 수질공개</a></li>
-              <li><a href="#" class="href-icon">통합예약</a></li>
-              <li><a href="#" class="href-icon">민원신청</a></li>
-              <li><a href="#">청사안내</a> / <a href="#">행정조직도</a></li>
-              <li><a href="#">시민안전보험</a></li>
-              <li><a href="#" class="href-icon">공보</a> / <a href="#" class="href-icon">보도자료</a></li>
-              <li><a href="#">1366센터</a></li>
-              <li><a href="#" class="href-icon">바른주차 문자알림</a></li>
-              <li><a href="#" class="href-icon">통합모니터단</a></li>
-            </ul>
+        <div class="wrap">
+          <div class="col1">
+            <h2>대구시 운영서비스</h2>
+            <div class="swiper">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <ul>
+                    <li>
+                      <a href="#">
+                        <div class="img-box"></div>
+                        <span>시정추진 우수부서</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <div class="img-box"></div>
+                        <span>컬러풀 대구이야기</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <div class="img-box"></div>
+                        <span>안심하이소</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <div class="img-box"></div>
+                        <span>시민건강 놀이터</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <div class="img-box"></div>
+                        <span>D_데이터허브</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <div class="img-box"></div>
+                        <span>대구 서비스 인구분석</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <div class="img-box"></div>
+                        <span>민원·공모 홈서비스</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <div class="img-box"></div>
+                        <span>신기술 플랫폼</span>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+                <div class="swiper-slide">
+                  <ul>
+                    <li>
+                      <a href="#">
+                        <div class="img-box"></div>
+                        <span>규제정보포털</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <div class="img-box"></div>
+                        <span>바른주차안내 문자서비스</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <div class="img-box"></div>
+                        <span>규제개혁 신문고</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <div class="img-box"></div>
+                        <span>공무원 교육원</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <div class="img-box"></div>
+                        <span>익명신고 (레드휘슬)</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <div class="img-box"></div>
+                        <span>공익제보</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <div class="img-box"></div>
+                        <span>자치법규 (조례·규칙)</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <div class="img-box"></div>
+                        <span>대구시<br>통합모니터단</span>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+                <div class="swiper-slide">
+                  <ul>
+                    <li>
+                      <a href="#">
+                        <div class="img-box"></div>
+                        <span>대구 음악창의도시</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <div class="img-box"></div>
+                        <span>대기오염 문자알림신청</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <div class="img-box"></div>
+                        <span>대구시청 작은도서관</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <div class="img-box"></div>
+                        <span>도시브랜드 웬툰</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <div class="img-box"></div>
+                        <span>대구 전기차 충전소</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <div class="img-box"></div>
+                        <span>비상대피 / 급수시설</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <div class="img-box"></div>
+                        <span>대구지도포털</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <div class="img-box"></div>
+                        <span>주민참여예산</span>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <div class="btn-next"></div>
+              <div class="btn-prev"></div>
+              <div class="btn-custom-stop"></div>
+              <div class="btn-more"><a href="#"></a></div>
+            </div>
           </div>
-          <div class="people">
+          <div class="col2">
             <ul>
-              <li><a href="#" class="href-icon">공보</a> / <a href="#" class="href-icon">보도해명</a></li>
-              <li><a href="#" class="href-icon">대구지도포털</a></li>
-              <li><a href="#" class="href-icon">청년정책</a></li>
-              <li><a href="#" class="href-icon">버스노선</a> / <a href="#" class="href-icon">교통정보</a></li>
-              <li><a href="#" class="href-icon">실시간대기정보</a></li>
-              <li><a href="#" class="href-icon">재해 재난 시민행동요령</a></li>
-              <li><a href="#" class="href-icon">대구소식당신청</a></li>
-              <li><a href="#" class="href-icon">부동산정보조회</a></li>
-              <li><a href="#" class="href-icon">시험/취업</a></li>
-              <li><a href="#" class="href-icon">자치법규(조례·규칙)</a></li>
-              <li><a href="#" class="href-icon">민원서류발급</a></li>
-              <li><a href="#" class="href-icon">응급의료포털</a> / <a href="#" class="href-icon">복지로</a></li>
+              <li class="active"><h2>자주찾는 메뉴</h2></li>
+              <li><h2>시민</h2></li>
+              <li><h2>사업자</h2></li>
+              <li><h2>관광객</h2></li>
             </ul>
-          </div>
-          <div class="buisness">
-            <ul>
-              <li><a href="#">개별주택가격/공시지가</a></li>
-              <li><a href="#" class="href-icon">대구통계</a></li>
-              <li><a href="#">입찰정보</a></li>
-              <li><a href="#">규제개혁</a></li>
-              <li><a href="#">시정주요업무계획</a></li>
-              <li><a href="#" class="href-icon">원스톱기업지원</a></li>
-              <li><a href="#">도시계획</a></li>
-              <li><a href="#">대구투자환경</a></li>
-              <li><a href="#">계약정보</a></li>
-              <li><a href="#" class="href-icon">재정 예산정보</a></li>
-              <li><a href="#" class="href-icon">자치법규검색</a></li>
-              <li><a href="#">첨단산업단지</a></li>
-            </ul>
-          </div>
-          <div class="tour">
-            <ul>
-              <li><a href="#" class="href-icon">관광지</a></li>
-              <li><a href="#" class="href-icon">명품관광코스</a></li>
-              <li><a href="#" class="href-icon">축제행사</a></li>
-              <li><a href="#" class="href-icon">숙박/음식</a></li>
-              <li><a href="#" class="href-icon">뷰티투어</a></li>
-              <li><a href="#" class="href-icon">의료관광</a></li>
-              <li><a href="#" class="href-icon">대구시티투어</a></li>
-              <li><a href="#" class="href-icon">관광안내지도신청</a></li>
-              <li><a href="#" class="href-icon">공연전시정보</a></li>
-              <li><a href="#">걷기코스</a></li>
-              <li><a href="#">자전거투어</a></li>
-              <li><a href="#">공원</a></li>
-            </ul>
+            <div class="menu">
+              <ul>
+                <li><a href="#" class="href-icon">달구벌미소문자</a></li>
+                <li><a href="#" class="href-icon">물가동향</a></li>
+                <li><a href="#" class="href-icon">컬러풀 뉴스룸</a></li>
+                <li><a href="#" class="href-icon">수돗물실시간 수질공개</a></li>
+                <li><a href="#" class="href-icon">통합예약</a></li>
+                <li><a href="#" class="href-icon">민원신청</a></li>
+                <li><a href="#">청사안내</a> / <a href="#">행정조직도</a></li>
+                <li><a href="#">시민안전보험</a></li>
+                <li><a href="#" class="href-icon">공보</a> / <a href="#" class="href-icon">보도자료</a></li>
+                <li><a href="#">1366센터</a></li>
+                <li><a href="#" class="href-icon">바른주차 문자알림</a></li>
+                <li><a href="#" class="href-icon">통합모니터단</a></li>
+              </ul>
+            </div>
+            <div class="people">
+              <ul>
+                <li><a href="#" class="href-icon">공보</a> / <a href="#" class="href-icon">보도해명</a></li>
+                <li><a href="#" class="href-icon">대구지도포털</a></li>
+                <li><a href="#" class="href-icon">청년정책</a></li>
+                <li><a href="#" class="href-icon">버스노선</a> / <a href="#" class="href-icon">교통정보</a></li>
+                <li><a href="#" class="href-icon">실시간대기정보</a></li>
+                <li><a href="#" class="href-icon">재해 재난 시민행동요령</a></li>
+                <li><a href="#" class="href-icon">대구소식당신청</a></li>
+                <li><a href="#" class="href-icon">부동산정보조회</a></li>
+                <li><a href="#" class="href-icon">시험/취업</a></li>
+                <li><a href="#" class="href-icon">자치법규(조례·규칙)</a></li>
+                <li><a href="#" class="href-icon">민원서류발급</a></li>
+                <li><a href="#" class="href-icon">응급의료포털</a> / <a href="#" class="href-icon">복지로</a></li>
+              </ul>
+            </div>
+            <div class="buisness">
+              <ul>
+                <li><a href="#">개별주택가격/공시지가</a></li>
+                <li><a href="#" class="href-icon">대구통계</a></li>
+                <li><a href="#">입찰정보</a></li>
+                <li><a href="#">규제개혁</a></li>
+                <li><a href="#">시정주요업무계획</a></li>
+                <li><a href="#" class="href-icon">원스톱기업지원</a></li>
+                <li><a href="#">도시계획</a></li>
+                <li><a href="#">대구투자환경</a></li>
+                <li><a href="#">계약정보</a></li>
+                <li><a href="#" class="href-icon">재정 예산정보</a></li>
+                <li><a href="#" class="href-icon">자치법규검색</a></li>
+                <li><a href="#">첨단산업단지</a></li>
+              </ul>
+            </div>
+            <div class="tour">
+              <ul>
+                <li><a href="#" class="href-icon">관광지</a></li>
+                <li><a href="#" class="href-icon">명품관광코스</a></li>
+                <li><a href="#" class="href-icon">축제행사</a></li>
+                <li><a href="#" class="href-icon">숙박/음식</a></li>
+                <li><a href="#" class="href-icon">뷰티투어</a></li>
+                <li><a href="#" class="href-icon">의료관광</a></li>
+                <li><a href="#" class="href-icon">대구시티투어</a></li>
+                <li><a href="#" class="href-icon">관광안내지도신청</a></li>
+                <li><a href="#" class="href-icon">공연전시정보</a></li>
+                <li><a href="#">걷기코스</a></li>
+                <li><a href="#">자전거투어</a></li>
+                <li><a href="#">공원</a></li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
